# ahqstore-app-framework

./: .gitignore  LATEST.md  README.md  version.json
.github/workflows/: build.yml
create_ahq_store/: create.js  package.json  pnpm-lock.yaml
framework/: Cargo.toml  build.rs  debug.ps1  package.json  release.ps1
framework/js/: getMethods.js  index.js  package.json  pnpm-lock.yaml  runtime.js
framework/js/api/app/: index.js
framework/js/api/electron/: index.js
framework/js/api/window/: create.js  customEval.js  getVal.js  loadFile.js  loadURL.js  removeMenu.js  setProgress.js
framework/src/: main.old.rs  main.rs
framework/src/app/: mod.rs  structs.rs
framework/src/server/: mod.rs
store_js/: index.js  package.json
store_js_lite/: README.md  document.js  index.js  index.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
store_js_lite/src/: debug.js  package.js
store_rs/: Cargo.toml
store_rs_core/: Cargo.toml  README.md  build.rs
store_rs_core/src/: lib.rs  main.rs
store_rs_core/src/utils/: locate.rs  mod.rs
store_rs_types/: Cargo.toml
