[package]
name = "framework"
version = "0.2.0"
edition = "2021"

[dependencies]
dirs-next = "2"
interprocess = { version = "1", default-features = false }
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
threadpool = "1.8.1"
windows = { version = "0.51", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
] }
wry = "0.33"
