[package]
name = "ahq_store_rs"
description = "The full stack crate for interfacing with the AHQ Store Framework APi (Windows)"
license = "MIT"
authors = ["AHQ"]
version = "0.10.0-alpha-1"
edition = "2021"
repository = "https://github.com/ahqsoftwares/ahqstore-app-framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahq_store_rs_core = "0.1.0"
