[package]
name = "ahq_store_rs"
description = "The full stack crate for interfacing with the AHQ Store Framework APi (Windows)"
license = "MIT"
authors = ["AHQ"]
edition = "2021"
repository = "https://github.com/ahqsoftwares/ahqstore-app-framework"

version = "0.10.0-alpha.1.7"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
ahq_store_rs_core = "0.10.0-alpha.1.6"
