[package]
name = "ahq_store_rs_core"
description = "The core crate for interfacing with the AHQ Store Framework APi (Windows)"
license = "MIT"
authors = ["AHQ"]
version = "0.10.0-alpha.1.1"
edition = "2021"
repository = "https://github.com/ahqsoftwares/ahqstore-app-framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.167", features=["derive"]}
serde_json = "1.0.100"
ws = "0.9.2"
