[package]
name = "ahq_store_rs_core"
description = "The core crate for interfacing with the AHQ Store Framework APi (Windows)"
license = "MIT"
authors = ["AHQ"]
edition = "2021"
repository = "https://github.com/ahqsoftwares/ahqstore-app-framework"
readme = "README.md"

version = "0.10.0-alpha.1.8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.167", features=["derive"]}
serde_json = "1.0.100"
tungstenite = "0.19.0"

[build-dependencies]
serde = {version = "1.0.167", features=["derive"]}
serde_json = "1.0.100"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
